--- a/src/sass/blocks/_header.scss
+++ b/src/sass/blocks/_header.scss
@@ -25,16 +25,13 @@
         font-weight: 700;
         font-size: 18px;
         color: #FFFFFF;
-    }
-    .button {
-        font-weight: 500;
-        font-size: 12px;
-        color: #FFFFFF;
-        
-        width: 153px;
-        height: 32px;
-        
-
-        background: #C70101;
-        border-radius: 5px;
+        &:hover {
+            color: #FFFFFF;
+            text-decoration: none;
+        }
+    } 
+    .header__contacts {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-end;
     }
