--- a/src/sass/blocks/_promo.scss
+++ b/src/sass/blocks/_promo.scss
@@ -4,4 +4,45 @@
     padding: 21px 0 93px 0;
     background: url(../../img/main.jpg) center (center/cover) no-repeat;  
 
-}
+    &__wrapper {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-end;
+        margin-top: 90px;
+    }
+    &__header {
+        font-weight: 700;
+        font-size: 42px;
+        text-transform: uppercase;
+        color: #FFFFFF;
+    }
+    &__subheader {
+        font-weight: 500;
+        font-size: 24px;
+        text-transform: uppercase;
+        margin-top: 17px;
+        color: #FFFFFF;
+
+
+    }
+    &__icons {
+        margin-top: 60px;
+        width: 424px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+    &__icon {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    &__text {
+        font-weight: 500;
+        font-size: 14px;
+        line-height: 14px;
+        color: #FFFFFF;
+        margin-top: 20px;
+        text-align: center;
+    }
+}    
