вёрстка 3 секции, форма

--- a/src/sass/blocks/style.scss
+++ b/src/sass/blocks/style.scss
@@ -12,4 +12,10 @@
 
 @import '../blocks/buttons';
 
-@import '../blocks/benefits'
+@import '../blocks/benefits';
+
+@import '../blocks/consultation';
+
+@import '../blocks/title';
+
+@import '../blocks/forms';
