--- a/src/sass/blocks/_buttons.scss
+++ b/src/sass/blocks/_buttons.scss
@@ -26,4 +26,12 @@
         text-transform: uppercase;
         color: #FFFFFF;
     }
+    &_submit {
+        width: 100%;
+        height: 55px;
+        font-weight: 500;
+        font-size: 16px;
+        text-transform: uppercase;
+        color: #FFFFFF;
+    }
     }
