carousel and tabs

--- a/src/sass/blocks/_benefits.scss
+++ b/src/sass/blocks/_benefits.scss
@@ -1,5 +1,5 @@
 .benefits {
-    height: 473px;
+    min-height: 473px;
     background: #F6F6F6;
     padding: 65px 0 65px 0;
 /*     display: flex;
