--- a/src/sass/blocks/style.scss
+++ b/src/sass/blocks/style.scss
@@ -19,3 +19,9 @@
 @import '../blocks/title';
 
 @import '../blocks/forms';
+
+@import '../blocks/media';
+
+@import '../blocks/carousel';
+
+@import '../blocks/catalog';
