--- a/src/sass/blocks/_consultation.scss
+++ b/src/sass/blocks/_consultation.scss
@@ -8,4 +8,14 @@
         line-height: 30px;
         color: #FFFFFF;
     }
+    .error {
+        border: 1px solid red;
+    }
+    label.error {
+        font-size: 14px;
+        color: #FFFFFF;
+        border: none;
+        text-align: center;
+        margin-bottom: 10px;
+    }
 }
